chore: release verifications endpoint
